tests/samples/negative/expressions/shift_amount_negative.ax
module shift_amount_negative;

fn main() -> i32 {
    let value: i32 = 1 << -1;
    return value;
}
